--- a/style.css
+++ b/style.css
@@ -1,127 +1,267 @@
-html {
-  scroll-behavior: smooth;
+html,
+body {
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
-  
-  overflow-x:hidden;
+  min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
-.darkArea {
-  background: #11171C;;
-}
-
-.lightArea {
-  background: #AFD0ED;
-}
-
-.mainColumn {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 100px 40px;
-}
-
-.topBar {
-  margin-bottom: 100px;
-}
-
-.left {
+.button {
   display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: Open Sans;
+  font-size: 10px;
+  letter-spacing: .2em;
+  padding: 15px 30px;
+  margin: 0 15px;
+  min-width: 80px;
+  color: #ffffff;
 }
 
-.right {
-  text-align: right;
-  float: right;
+@media (max-width: 1170px) {
+  .button {
+    padding: 10px 20px;
+    font-size: 8px;
+  }
 }
 
-.siteIcon {
-  width: 36px;
-  opacity: 0.8;
-  transition: opacity 0.1s;
+.subscribe-form .btn-solid,
+.btn-solid {
+  border: 2px solid #05adff;
+  background: #05adff;
+  color: #ffffff;
+  transition: color .2s, background .2s, border .2s;
 }
 
-.iconLink:hover .siteIcon {
-  opacity: 1;
+.subscribe-form .btn-solid:hover,
+.btn-solid:hover {
+  color: #ffffff;
+  background: #007bb7;
+  border: 2px solid #007bb7;
 }
 
-.nav {
-  display: inline-block;
+.subscribe-form .btn-ghost,
+.btn-ghost {
+  border: 2px solid #05adff;
+  color: #ffffff;
+  transition: color .2s, background .2s;
+}
+
+.subscribe-form .btn-ghost:hover,
+.btn-ghost:hover {
+  color: #ffffff;
+  background: #05adff;
+}
+
+.btn-round {
+  border-radius: 100px;
+}
+
+/*Hero*/
+.hero {
+  background: #333;
+  background: url(background.jpg);
+  background-size: cover;
+  min-height: 100vh;
   position: relative;
-  top: 12px;
-}
-.nav a {
-  color: #DAE8F5;
-  font-family: 'Raleway', sans-serif;
-  text-decoration: none;
-  margin-left: 30px;
-  opacity: 0.8;
-}
-.nav a:hover {
-  opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0;
+  box-sizing: border-box;
 }
 
-.pageHeader {
-  font-family: 'Raleway', sans-serif;
-  font-size: 40px;
-  font-weight: 100;
-  
-  color: #AFD0ED;
-  text-decoration: none;
+.hero:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(51, 49, 58, 0.8);
 }
-.pageHeader span {
-  color: #1A63A3;
-  font-size: 60px;
+
+.centered {
+  z-index: 1;
+}
+
+.logo {
+  margin: auto;
   display: block;
-  font-weight: 700;
+  width: 70px;
+  height: 80px;
+  padding-right: 10px;
 }
 
-.sectionHeader {
-  color: #11171C;
-  font-size: 38px;
-  font-family: 'Raleway', sans-serif;
-}
-.sectionHeader span {
-  color: #1A63A3;
+@media (max-width: 1170px) {
+  .logo {
+    width: 70px;
+  }
 }
 
-.darkArea .sectionHeader {
-  color: #AFD0ED;
+.title {
+  font-family: Montserrat;
+  color: #ffffff;
+  font-weight: 100;
+  letter-spacing: .5em;
+  padding: 0 0 0 .5em;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-top: 20px;
 }
 
-.paragraphContent {
-  color: #AFD0ED;
-  font-family: 'Raleway', sans-serif;
-  font-size: 24px;
-}
-.paragraphContent b {
-  font-weight: 700;
-  color: white;
+@media (max-width: 1170px) {
+  .title {
+    font-size: 12px;
+    margin-top: 15px;
+  }
 }
 
-.lightArea .paragraphContent {
-  color: #11171C;
-}
-.lightArea .paragraphContent b {
-  color: #1A63A3;
-}
-
-.dashedList li:before {
-  content: "-";
-  position: relative;
-  left: -15px;
-}
-
-.dashedList li {
-  text-indent: -5px;
-  list-style: none;
+.heading {
+  margin-top: 80px;
+  color: #ffffff;
+  font-family: Montserrat;
+  font-size: 48px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: .3em;
+  padding: 0 0 0 .3em;
+  font-weight: 100;
 }
 
-.contactList a {
-  color: #1A63A3;
+@media (max-width: 1170px) {
+  .heading {
+    font-size: 32px;
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  .heading {
+    font-size: 24px;
+  }
+}
+
+.description {
+  font-family: Raleway;
+  color: #ffffff;
+  text-align: center;
+  line-height: 2.5em;
+  letter-spacing: .15em;
+  max-width: 600px;
+}
+
+@media (max-width: 1170px) {
+  .description {
+    font-size: 13px;
+    max-width: 500px;
+  }
+}
+
+@media (max-width: 480px) {
+  .description {
+    font-size: 11px;
+    width: 300px;
+  }
+}
+
+.buttons {
+  margin: 80px 0 0;
+  text-align: center;
+}
+
+@media (max-width: 1170px) {
+  .buttons {
+    margin: 40px 0 0;
+  }
+  .buttons .button {
+    margin-top: 10px;
+  }
+}
+
+.social-text {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  width: 100vw;
+  text-align: center;
+}
+
+.social-text a {
+  color: #b3b3b3;
   text-decoration: none;
+  text-transform: uppercase;
+  font-family: Montserrat;
+  font-size: 9px;
+  letter-spacing: .2em;
+  padding: 0 0 0 .2em;
+  margin: 0 10px;
+  transition: color .4s;
 }
-.contactList a:hover {
-  font-weight: 700;
+
+@media (max-width: 1170px) {
+  .social-text a {
+    font-size: 8px;
+  }
+}
+
+.social-text a:hover {
+  color: #ffffff;
+}
+
+/*Countdown*/
+.countdown {
+  display: none;
+  text-align: center;
+}
+
+.countdown.active {
+  display: block;
+}
+
+.countdown .count-box {
+  display: inline-block;
+  text-align: center;
+  color: #ffffff;
+  margin: 10px 30px;
+}
+
+.countdown .count-box:first-child {
+  margin: 10px 30px 10px 0;
+}
+
+.countdown .count-box:last-child {
+  margin: 10px 0 10px 30px;
+}
+
+@media (max-width: 480px) {
+  .countdown .count-box {
+    width: 50%;
+    margin: 20px 0 !important;
+  }
+}
+
+.countdown .count-box .countdown-num {
+  font-size: 42px;
+  font-family: Montserrat;
+  margin: 0;
+}
+
+.countdown .count-box .countdown-word {
+  font-family: Montserrat;
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: .15em;
+}
+
+.countdown .count-box .countdown-word:first-letter {
+  color: #05adff;
 }
